--- a/data/minecraft/loot_tables/gameplay/fishing/treasure.json
+++ b/data/minecraft/loot_tables/gameplay/fishing/treasure.json
@@ -6,17 +6,17 @@
       "entries": [
         {
           "type": "minecraft:item",
-          "weight": 5,
+          "weight": 50,
           "name": "minecraft:name_tag"
         },
         {
           "type": "minecraft:item",
-          "weight": 2,
+          "weight": 10,
           "name": "minecraft:saddle"
         },
         {
           "type": "minecraft:item",
-          "weight": 2,
+          "weight": 5,
           "functions": [
             {
               "function": "minecraft:set_damage",
@@ -35,7 +35,26 @@
         },
         {
           "type": "minecraft:item",
-          "weight": 10,
+          "conditions": [
+            {
+              "condition": "minecraft:alternative",
+              "terms": [
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:the_end"
+                  }
+                },
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:mushroom_island"
+                  }
+                }
+              ]
+            }
+          ],
+          "weight": 250,
           "functions": [
             {
               "function": "minecraft:enchant_with_levels",
@@ -47,8 +66,63 @@
         },
         {
           "type": "minecraft:item",
-          "weight": 5,
+          "conditions": [
+            {
+              "condition": "minecraft:alternative",
+              "terms": [
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:ocean"
+                  }
+                },
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:deep_ocean"
+                  }
+                }
+              ]
+            }
+          ],
+          "weight": 50,
           "name": "minecraft:nautilus_shell"
+        },
+        {
+          "type": "minecraft:item",
+          "conditions": [
+            {
+              "condition": "minecraft:alternative",
+              "terms": [
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:frozen_ocean"
+                  }
+                },
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:deep_frozen_ocean"
+                  }
+                },
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:ocean"
+                  }
+                },
+                {
+                  "condition": "minecraft:location_check",
+                  "predicate": {
+                    "biome": "minecraft:deep_ocean"
+                  }
+                }
+              ]
+            }
+          ],
+          "weight": 3,
+          "name": "minecraft:trident"
         }
       ]
     }
